kubernetes/frontend/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: republikorp-fe
          image: maolanaikhsan31/republikorp-fe-test
          port:
            - name: port-fe
              containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "128m"
            limits:
              memory: "128Mi"
              cpu: "128m"
