kubernetes/frontend/fe-ingress.yaml
apiVersion: networking.kubernetes.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: republikorp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-svc
                port:
                  number: 3000
